新增台指選擇權put/call ratio資料取得

--- a/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
+++ b/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
@@ -405,7 +405,7 @@
     }
    ],
    "source": [
-    "# 針對pc_ratio_df，以Date單筆先確認tw_pc_ratio表中，欄位Date沒有重複資料時，才進行單筆insert\n",
+    "# 針對DataFrame，以Date單筆先確認表中，欄位Date沒有重複資料時，才進行單筆insert\n",
     "for i in range(len(futures_data_df)):\n",
     "    try:\n",
     "        futures_data_df.iloc[i:i+1].to_sql(table_name, conn_duckdb, if_exists=\"append\", index=False)\n",
@@ -607,7 +607,7 @@
     }
    ],
    "source": [
-    "# 查詢tw_pc_ratio表中所有資料\n",
+    "# 查詢表中所有資料\n",
     "conn_duckdb.execute(f\"SELECT * FROM {table_name} order by Date desc\").fetch_df()"
    ]
   },
