透過finlab資料取得最新一個交易日資訊

--- a/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
+++ b/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
@@ -30,8 +30,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from finlab import data\n",
+    "import finlab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 引用自建公用模組\n",
-    "from proj_util_pkg.settings import ProjEnvSettings"
+    "from proj_util_pkg.settings import ProjEnvSettings\n",
+    "from proj_util_pkg.finlab_api import finlab_manager as flm"
    ]
   },
   {
@@ -43,7 +54,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入成功!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# finlab api 服務初始化\n",
+    "finlab = flm.FinlabManager()\n",
+    "data.force_cloud_download = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,18 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bryson0083/projects/bryson_stock/.venv/lib/python3.12/site-packages/urllib3/connectionpool.py:1061: InsecureRequestWarning: Unverified HTTPS request is being made to host 'openapi.taifex.com.tw'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/1.26.x/advanced-usage.html#ssl-warnings\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 取得散戶小台淨未平倉口數資料\n",
     "major_futures_contracts_by_date = requests.get(\n",
@@ -96,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +155,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>-4797</td>\n",
+       "      <td>2024-10-04</td>\n",
+       "      <td>-1661</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -143,10 +164,10 @@
       ],
       "text/plain": [
        "        Date  OpenInterest(Net)\n",
-       "0 2024-10-01              -4797"
+       "0 2024-10-04              -1661"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,26 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2024-10-01 00:00:00')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# 取得最後一筆交易日，作為方法2的查詢終止日條件\n",
-    "last_txn_date = mjfut_df_grouped.tail(1)[\"Date\"].values[0]\n",
-    "last_txn_date = pd.to_datetime(last_txn_date)\n",
+    "# # 取得最後一筆交易日，作為方法2的查詢終止日條件\n",
+    "# last_txn_date = mjfut_df_grouped.tail(1)[\"Date\"].values[0]\n",
+    "# last_txn_date = pd.to_datetime(last_txn_date)\n",
     "\n",
-    "last_txn_date"
+    "# last_txn_date"
    ]
   },
   {
@@ -202,7 +212,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your version is 1.2.15, please install a newer version.\n",
+      "Use \"pip install finlab==1.2.16\" to update the latest version.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "近一個交易日期: 2024-10-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 讀取台股收盤價資訊\n",
+    "close = data.get(\"price:收盤價\", save_to_storage=True)\n",
+    "\n",
+    "# 取得近一個交易日期\n",
+    "last_txn_date = close.tail(1).index[0].date()\n",
+    "print(f\"近一個交易日期: {last_txn_date}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +251,7 @@
        "'futures_data.csv'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,19 +352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'firstDate': '2021/10/01 00:00', 'lastDate': '2024/10/01 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/01', 'commodityId': 'MXF'}\n",
+      "{'firstDate': '2021/10/07 00:00', 'lastDate': '2024/10/07 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/07', 'commodityId': 'MXF'}\n",
       "CSV檔案已成功下載並儲存為futures_data.csv\n",
-      "{'firstDate': '2021/10/01 00:00', 'lastDate': '2024/10/01 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/01', 'commodityId': 'TMF'}\n",
+      "{'firstDate': '2021/10/07 00:00', 'lastDate': '2024/10/07 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/07', 'commodityId': 'TMF'}\n",
       "CSV檔案已成功下載並儲存為futures_data.csv\n",
       "        Date  散戶小台淨未平倉口數  散戶微台淨未平倉口數\n",
-      "0 2024-10-01       -4797       -9650\n"
+      "0 2024-10-01       -4797       -9650\n",
+      "1 2024-10-04       -1661       -7931\n",
+      "2 2024-10-07       -3085       -1797\n"
      ]
     }
    ],
@@ -362,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/14/b8c6vz6n79n4wt12qny6djk40000gn/T/ipykernel_42437/4050385821.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/14/b8c6vz6n79n4wt12qny6djk40000gn/T/ipykernel_57384/1973475435.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  futures_data_df.iloc[i:i+1].to_sql(table_name, conn_duckdb, if_exists=\"append\", index=False)\n"
      ]
     }
@@ -416,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -448,126 +490,138 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>-3085</td>\n",
+       "      <td>-1797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-10-04</td>\n",
+       "      <td>-1661</td>\n",
+       "      <td>-7931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>2024-10-01</td>\n",
        "      <td>-4797</td>\n",
        "      <td>-9650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>3</th>\n",
        "      <td>2024-09-30</td>\n",
        "      <td>-6923</td>\n",
        "      <td>-13272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>4</th>\n",
        "      <td>2024-09-27</td>\n",
        "      <td>-6445</td>\n",
        "      <td>-4239</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>5</th>\n",
        "      <td>2024-09-26</td>\n",
        "      <td>-3299</td>\n",
        "      <td>1647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>6</th>\n",
        "      <td>2024-09-25</td>\n",
        "      <td>-755</td>\n",
        "      <td>3499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>7</th>\n",
        "      <td>2024-09-24</td>\n",
        "      <td>-489</td>\n",
        "      <td>6152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>8</th>\n",
        "      <td>2024-09-23</td>\n",
        "      <td>-7189</td>\n",
        "      <td>3665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>9</th>\n",
        "      <td>2024-09-20</td>\n",
        "      <td>-4826</td>\n",
        "      <td>1942</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>10</th>\n",
        "      <td>2024-09-19</td>\n",
        "      <td>-5187</td>\n",
        "      <td>6236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>11</th>\n",
        "      <td>2024-09-18</td>\n",
        "      <td>-7945</td>\n",
        "      <td>-3537</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>12</th>\n",
        "      <td>2024-09-16</td>\n",
        "      <td>-3743</td>\n",
        "      <td>-8584</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>13</th>\n",
        "      <td>2024-09-13</td>\n",
        "      <td>-3489</td>\n",
        "      <td>-6839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>14</th>\n",
        "      <td>2024-09-12</td>\n",
        "      <td>-2322</td>\n",
        "      <td>-4179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>15</th>\n",
        "      <td>2024-09-11</td>\n",
        "      <td>-6437</td>\n",
        "      <td>-16411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>16</th>\n",
        "      <td>2024-09-10</td>\n",
        "      <td>-6251</td>\n",
        "      <td>-18339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>17</th>\n",
        "      <td>2024-09-09</td>\n",
        "      <td>-6989</td>\n",
        "      <td>-14621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>18</th>\n",
        "      <td>2024-09-06</td>\n",
        "      <td>-7709</td>\n",
        "      <td>-14879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>19</th>\n",
        "      <td>2024-09-05</td>\n",
        "      <td>-5013</td>\n",
        "      <td>-18783</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>20</th>\n",
        "      <td>2024-09-04</td>\n",
        "      <td>-7296</td>\n",
        "      <td>-22580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>21</th>\n",
        "      <td>2024-09-03</td>\n",
        "      <td>-12504</td>\n",
        "      <td>-22388</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>22</th>\n",
        "      <td>2024-09-02</td>\n",
        "      <td>-14318</td>\n",
        "      <td>-19207</td>\n",
@@ -578,30 +632,32 @@
       ],
       "text/plain": [
        "         Date  散戶小台淨未平倉口數  散戶微台淨未平倉口數\n",
-       "0  2024-10-01       -4797       -9650\n",
-       "1  2024-09-30       -6923      -13272\n",
-       "2  2024-09-27       -6445       -4239\n",
-       "3  2024-09-26       -3299        1647\n",
-       "4  2024-09-25        -755        3499\n",
-       "5  2024-09-24        -489        6152\n",
-       "6  2024-09-23       -7189        3665\n",
-       "7  2024-09-20       -4826        1942\n",
-       "8  2024-09-19       -5187        6236\n",
-       "9  2024-09-18       -7945       -3537\n",
-       "10 2024-09-16       -3743       -8584\n",
-       "11 2024-09-13       -3489       -6839\n",
-       "12 2024-09-12       -2322       -4179\n",
-       "13 2024-09-11       -6437      -16411\n",
-       "14 2024-09-10       -6251      -18339\n",
-       "15 2024-09-09       -6989      -14621\n",
-       "16 2024-09-06       -7709      -14879\n",
-       "17 2024-09-05       -5013      -18783\n",
-       "18 2024-09-04       -7296      -22580\n",
-       "19 2024-09-03      -12504      -22388\n",
-       "20 2024-09-02      -14318      -19207"
+       "0  2024-10-07       -3085       -1797\n",
+       "1  2024-10-04       -1661       -7931\n",
+       "2  2024-10-01       -4797       -9650\n",
+       "3  2024-09-30       -6923      -13272\n",
+       "4  2024-09-27       -6445       -4239\n",
+       "5  2024-09-26       -3299        1647\n",
+       "6  2024-09-25        -755        3499\n",
+       "7  2024-09-24        -489        6152\n",
+       "8  2024-09-23       -7189        3665\n",
+       "9  2024-09-20       -4826        1942\n",
+       "10 2024-09-19       -5187        6236\n",
+       "11 2024-09-18       -7945       -3537\n",
+       "12 2024-09-16       -3743       -8584\n",
+       "13 2024-09-13       -3489       -6839\n",
+       "14 2024-09-12       -2322       -4179\n",
+       "15 2024-09-11       -6437      -16411\n",
+       "16 2024-09-10       -6251      -18339\n",
+       "17 2024-09-09       -6989      -14621\n",
+       "18 2024-09-06       -7709      -14879\n",
+       "19 2024-09-05       -5013      -18783\n",
+       "20 2024-09-04       -7296      -22580\n",
+       "21 2024-09-03      -12504      -22388\n",
+       "22 2024-09-02      -14318      -19207"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
