異動計算邏輯

--- a/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
+++ b/collect_台股晴雨表_散戶小台微台淨未平倉量.ipynb
@@ -124,7 +124,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(45, 15)\n"
+      "(66, 15)\n"
      ]
     },
     {
@@ -155,8 +155,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-10-04</td>\n",
-       "      <td>-1661</td>\n",
+       "      <td>2024-10-22</td>\n",
+       "      <td>-8908</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -164,7 +164,7 @@
       ],
       "text/plain": [
        "        Date  OpenInterest(Net)\n",
-       "0 2024-10-04              -1661"
+       "0 2024-10-22              -8908"
       ]
      },
      "execution_count": 8,
@@ -227,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "近一個交易日期: 2024-10-07\n"
+      "近一個交易日期: 2024-10-23\n"
      ]
     }
    ],
@@ -346,6 +346,9 @@
     "    \n",
     "    # mjfut_df group by date, sum OpenInterest(Net)\n",
     "    mjfut_df_grouped = mjfut_df.groupby(\"Date\").agg({commodity_name: \"sum\"}).reset_index()\n",
+    "\n",
+    "    # 將commodity_name列的值乘以-1 (散戶視為反指標，作多代表空)\n",
+    "    mjfut_df_grouped[commodity_name] = mjfut_df_grouped[commodity_name] * -1\n",
     "    \n",
     "    return mjfut_df_grouped\n"
    ]
@@ -359,14 +362,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'firstDate': '2021/10/07 00:00', 'lastDate': '2024/10/07 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/07', 'commodityId': 'MXF'}\n",
+      "{'firstDate': '2021/10/23 00:00', 'lastDate': '2024/10/23 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/23', 'commodityId': 'MXF'}\n",
       "CSV檔案已成功下載並儲存為futures_data.csv\n",
-      "{'firstDate': '2021/10/07 00:00', 'lastDate': '2024/10/07 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/07', 'commodityId': 'TMF'}\n",
+      "{'firstDate': '2021/10/23 00:00', 'lastDate': '2024/10/23 00:00', 'queryStartDate': '2024/10/01', 'queryEndDate': '2024/10/23', 'commodityId': 'TMF'}\n",
       "CSV檔案已成功下載並儲存為futures_data.csv\n",
-      "        Date  散戶小台淨未平倉口數  散戶微台淨未平倉口數\n",
-      "0 2024-10-01       -4797       -9650\n",
-      "1 2024-10-04       -1661       -7931\n",
-      "2 2024-10-07       -3085       -1797\n"
+      "         Date  散戶小台淨未平倉口數  散戶微台淨未平倉口數\n",
+      "0  2024-10-01        4797        9650\n",
+      "1  2024-10-04        1661        7931\n",
+      "2  2024-10-07        3085        1797\n",
+      "3  2024-10-08        3555        7323\n",
+      "4  2024-10-09        2386        3241\n",
+      "5  2024-10-11        -546       -1983\n",
+      "6  2024-10-14       -3222       -2876\n",
+      "7  2024-10-15       -2231       -6064\n",
+      "8  2024-10-16       10371        4162\n",
+      "9  2024-10-17       11239        2528\n",
+      "10 2024-10-18        8353        6825\n",
+      "11 2024-10-21       14282       10758\n",
+      "12 2024-10-22        8908        9769\n",
+      "13 2024-10-23       14541       14948\n"
      ]
     }
    ],
@@ -441,7 +455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/14/b8c6vz6n79n4wt12qny6djk40000gn/T/ipykernel_57384/1973475435.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "/var/folders/14/b8c6vz6n79n4wt12qny6djk40000gn/T/ipykernel_22079/1973475435.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  futures_data_df.iloc[i:i+1].to_sql(table_name, conn_duckdb, if_exists=\"append\", index=False)\n"
      ]
     }
@@ -490,141 +504,87 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2024-10-07</td>\n",
-       "      <td>-3085</td>\n",
-       "      <td>-1797</td>\n",
+       "      <td>2024-10-23</td>\n",
+       "      <td>14541</td>\n",
+       "      <td>14948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2024-10-04</td>\n",
-       "      <td>-1661</td>\n",
-       "      <td>-7931</td>\n",
+       "      <td>2024-10-22</td>\n",
+       "      <td>8908</td>\n",
+       "      <td>9769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>-4797</td>\n",
-       "      <td>-9650</td>\n",
+       "      <td>2024-10-21</td>\n",
+       "      <td>14282</td>\n",
+       "      <td>10758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-09-30</td>\n",
-       "      <td>-6923</td>\n",
-       "      <td>-13272</td>\n",
+       "      <td>2024-10-18</td>\n",
+       "      <td>8353</td>\n",
+       "      <td>6825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-09-27</td>\n",
-       "      <td>-6445</td>\n",
-       "      <td>-4239</td>\n",
+       "      <td>2024-10-17</td>\n",
+       "      <td>11239</td>\n",
+       "      <td>2528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024-09-26</td>\n",
-       "      <td>-3299</td>\n",
-       "      <td>1647</td>\n",
+       "      <td>2024-10-16</td>\n",
+       "      <td>10371</td>\n",
+       "      <td>4162</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024-09-25</td>\n",
-       "      <td>-755</td>\n",
-       "      <td>3499</td>\n",
+       "      <td>2024-10-15</td>\n",
+       "      <td>-2231</td>\n",
+       "      <td>-6064</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2024-09-24</td>\n",
-       "      <td>-489</td>\n",
-       "      <td>6152</td>\n",
+       "      <td>2024-10-14</td>\n",
+       "      <td>-3222</td>\n",
+       "      <td>-2876</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2024-09-23</td>\n",
-       "      <td>-7189</td>\n",
-       "      <td>3665</td>\n",
+       "      <td>2024-10-11</td>\n",
+       "      <td>-546</td>\n",
+       "      <td>-1983</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2024-09-20</td>\n",
-       "      <td>-4826</td>\n",
-       "      <td>1942</td>\n",
+       "      <td>2024-10-09</td>\n",
+       "      <td>2386</td>\n",
+       "      <td>3241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2024-09-19</td>\n",
-       "      <td>-5187</td>\n",
-       "      <td>6236</td>\n",
+       "      <td>2024-10-08</td>\n",
+       "      <td>3555</td>\n",
+       "      <td>7323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2024-09-18</td>\n",
-       "      <td>-7945</td>\n",
-       "      <td>-3537</td>\n",
+       "      <td>2024-10-07</td>\n",
+       "      <td>3085</td>\n",
+       "      <td>1797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2024-09-16</td>\n",
-       "      <td>-3743</td>\n",
-       "      <td>-8584</td>\n",
+       "      <td>2024-10-04</td>\n",
+       "      <td>1661</td>\n",
+       "      <td>7931</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2024-09-13</td>\n",
-       "      <td>-3489</td>\n",
-       "      <td>-6839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024-09-12</td>\n",
-       "      <td>-2322</td>\n",
-       "      <td>-4179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024-09-11</td>\n",
-       "      <td>-6437</td>\n",
-       "      <td>-16411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024-09-10</td>\n",
-       "      <td>-6251</td>\n",
-       "      <td>-18339</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024-09-09</td>\n",
-       "      <td>-6989</td>\n",
-       "      <td>-14621</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024-09-06</td>\n",
-       "      <td>-7709</td>\n",
-       "      <td>-14879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2024-09-05</td>\n",
-       "      <td>-5013</td>\n",
-       "      <td>-18783</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2024-09-04</td>\n",
-       "      <td>-7296</td>\n",
-       "      <td>-22580</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2024-09-03</td>\n",
-       "      <td>-12504</td>\n",
-       "      <td>-22388</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2024-09-02</td>\n",
-       "      <td>-14318</td>\n",
-       "      <td>-19207</td>\n",
+       "      <td>2024-10-01</td>\n",
+       "      <td>4797</td>\n",
+       "      <td>9650</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -632,29 +592,20 @@
       ],
       "text/plain": [
        "         Date  散戶小台淨未平倉口數  散戶微台淨未平倉口數\n",
-       "0  2024-10-07       -3085       -1797\n",
-       "1  2024-10-04       -1661       -7931\n",
-       "2  2024-10-01       -4797       -9650\n",
-       "3  2024-09-30       -6923      -13272\n",
-       "4  2024-09-27       -6445       -4239\n",
-       "5  2024-09-26       -3299        1647\n",
-       "6  2024-09-25        -755        3499\n",
-       "7  2024-09-24        -489        6152\n",
-       "8  2024-09-23       -7189        3665\n",
-       "9  2024-09-20       -4826        1942\n",
-       "10 2024-09-19       -5187        6236\n",
-       "11 2024-09-18       -7945       -3537\n",
-       "12 2024-09-16       -3743       -8584\n",
-       "13 2024-09-13       -3489       -6839\n",
-       "14 2024-09-12       -2322       -4179\n",
-       "15 2024-09-11       -6437      -16411\n",
-       "16 2024-09-10       -6251      -18339\n",
-       "17 2024-09-09       -6989      -14621\n",
-       "18 2024-09-06       -7709      -14879\n",
-       "19 2024-09-05       -5013      -18783\n",
-       "20 2024-09-04       -7296      -22580\n",
-       "21 2024-09-03      -12504      -22388\n",
-       "22 2024-09-02      -14318      -19207"
+       "0  2024-10-23       14541       14948\n",
+       "1  2024-10-22        8908        9769\n",
+       "2  2024-10-21       14282       10758\n",
+       "3  2024-10-18        8353        6825\n",
+       "4  2024-10-17       11239        2528\n",
+       "5  2024-10-16       10371        4162\n",
+       "6  2024-10-15       -2231       -6064\n",
+       "7  2024-10-14       -3222       -2876\n",
+       "8  2024-10-11        -546       -1983\n",
+       "9  2024-10-09        2386        3241\n",
+       "10 2024-10-08        3555        7323\n",
+       "11 2024-10-07        3085        1797\n",
+       "12 2024-10-04        1661        7931\n",
+       "13 2024-10-01        4797        9650"
       ]
      },
      "execution_count": 19,
